--- a/pets/app/src/main/res/values/strings_array.xml
+++ b/pets/app/src/main/res/values/strings_array.xml
@@ -5,4 +5,11 @@
         <item>Собака</item>
         <item>Птица</item>
     </array>
+
+    <array name="repeat_type">
+        <item>Не повторять</item>
+        <item>Каждый день</item>
+        <item>Каждую неделю</item>
+        <item>Каждый месяц</item>
+    </array>
 </resources>
