--- a/pets/app/src/main/res/layout/fragment_pet.xml
+++ b/pets/app/src/main/res/layout/fragment_pet.xml
@@ -13,22 +13,12 @@
         android:paddingEnd="32dp"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
-            android:textStyle="bold"
-            android:textSize="@dimen/font_normal_big"
-            android:textColor="@color/colorTextPrimary"
-            android:text="@string/pet_title_create"/>
-
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/avatarImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_photo_placeholder"
             app:shapeAppearanceOverlay="@style/CircleImageView"/>
@@ -73,6 +63,7 @@
                 android:inputType="none"
                 android:focusable="false"
                 android:cursorVisible="false"
+                android:focusableInTouchMode="false"
                 tools:ignore="LabelFor" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -200,37 +191,30 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <FrameLayout
-            android:id="@+id/applyContainer"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="16dp"
-            android:background="@drawable/bg_button_ripple"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/canceledDatesTextInputLayout"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/applyTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/pet_button_create"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/font_normal"
-                android:textStyle="bold"/>
+            <abdulmanov.eduard.pets.presentation._common.view.ProgressButton
+                android:id="@+id/deleteProgressButton"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/bg_button_ripple_gray"
+                android:layout_weight="0.5"
+                app:text="@string/pet_button_delete"/>
 
-            <ProgressBar
-                android:id="@+id/applyProgressBar"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:indeterminateTint="@android:color/white"
-                android:layout_gravity="center"
-                android:visibility="gone"/>
+            <abdulmanov.eduard.pets.presentation._common.view.ProgressButton
+                android:id="@+id/applyProgressButton"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:background="@drawable/bg_button_ripple_accent"
+                android:layout_weight="0.5"/>
 
-        </FrameLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
