--- a/pets/app/src/main/res/drawable/bg_button_ripple_active.xml
+++ b/pets/app/src/main/res/drawable/bg_button_ripple_active.xml
@@ -4,7 +4,7 @@
 
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark"/>
+            <solid android:color="@color/colorControlActive"/>
             <corners android:radius="12dp"/>
         </shape>
     </item>
