--- a/pets/app/src/main/res/drawable/bg_selectable_item.xml
+++ b/pets/app/src/main/res/drawable/bg_selectable_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="?attr/colorControlHighlight">
+    android:color="@color/colorPrimaryLight">
 
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
