--- a/pets/app/src/main/res/values/themes.xml
+++ b/pets/app/src/main/res/values/themes.xml
@@ -6,7 +6,6 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="android:statusBarColor" tools:targetApi="m">@color/colorPrimary</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
 
         <item name="toolbarStyle">@style/AppToolbar</item>
     </style>
@@ -17,6 +16,17 @@
         <item name="android:background">@color/colorBackgroundToolbar</item>
         <item name="android:elevation">4dp</item>
         <item name="titleTextColor">@color/colorTitleToolbar</item>
+    </style>
+
+    <style name="BottomDialogStyle" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetModalStyleSmallCorners</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowSoftInputMode">adjustResize</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
+    <style name="BottomSheetModalStyleSmallCorners" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bg_bottom_sheet</item>
     </style>
 
     <style name="CircleImageView">
