--- a/pets/app/src/main/res/layout/fragment_interview.xml
+++ b/pets/app/src/main/res/layout/fragment_interview.xml
@@ -4,43 +4,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/dayTypeTextInputLayout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal"
-            android:hint="@string/day_type"
-            android:theme="@style/TextInputLayout"
-            app:endIconMode="dropdown_menu"
-            app:endIconTint="@color/colorIconLight"
-            app:boxBackgroundColor="@android:color/white"
-            tools:ignore="MissingConstraints">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingStart="32dp"
+            android:paddingEnd="32dp">
 
-            <AutoCompleteTextView
-                android:id="@+id/dayTypeTextView"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/dayTypeTextInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorTextPrimary"
-                android:inputType="none"
-                android:focusable="false"
-                android:cursorVisible="false"
-                android:focusableInTouchMode="false"
-                android:textAlignment="center"
-                tools:ignore="LabelFor" />
+                android:layout_marginTop="16dp"
+                android:hint="@string/day_type"
+                android:orientation="horizontal"
+                android:theme="@style/TextInputLayout"
+                app:boxBackgroundColor="@android:color/white"
+                app:endIconMode="dropdown_menu"
+                app:endIconTint="@color/colorIconLight"
+                tools:ignore="MissingConstraints">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <AutoCompleteTextView
+                    android:id="@+id/dayTypeTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:cursorVisible="false"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    android:inputType="none"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorTextPrimary"
+                    tools:ignore="LabelFor" />
 
-    </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="64dp"
+                android:paddingEnd="64dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/font_few_big"
+                    android:text="@string/interview_pet_icon_label"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAccent" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="48dp"
+            android:paddingEnd="48dp"
+            android:layout_marginBottom="10dp"
+            android:layout_alignParentBottom="true"
+            android:textAlignment="center"
+            android:textColor="@color/colorTextSecondary"
+            android:text="@string/interview_footer" />
+
+    </RelativeLayout>
 
 </androidx.core.widget.NestedScrollView>
