--- a/pets/app/src/main/res/layout/fragment_interview.xml
+++ b/pets/app/src/main/res/layout/fragment_interview.xml
@@ -25,7 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:hint="@string/day_type"
+                android:hint="@string/interview_day_type"
                 android:orientation="horizontal"
                 android:theme="@style/TextInputLayout"
                 app:boxBackgroundColor="@android:color/white"
