Add rating mood

--- a/pets/app/src/main/res/layout/fragment_interview.xml
+++ b/pets/app/src/main/res/layout/fragment_interview.xml
@@ -54,6 +54,7 @@
                         android:inputType="none"
                         android:textAlignment="center"
                         android:textColor="@color/colorTextPrimary"
+                        android:paddingStart="50dp"
                         tools:ignore="LabelFor" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -83,6 +84,72 @@
                         android:text="@string/interview_pet_icon_label"
                         android:textAlignment="center"
                         android:textColor="@color/colorAccent" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RatingBar
+                        android:layout_marginTop="64dp"
+                        android:id="@+id/ratingBar"
+                        android:theme="@style/RatingBar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:scaleX="1.25"
+                        android:scaleY="1.25"
+                        android:numStars="5"
+                        android:stepSize="1.0"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/font_small_small"
+                            android:textColor="@color/colorTextPrimary"
+                            android:text="@string/interview_rating_1.0"
+                            android:layout_marginStart="14dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/font_small_small"
+                            android:textColor="@color/colorTextPrimary"
+                            android:text="@string/interview_rating_2.0"
+                            android:layout_marginStart="10dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/font_small_small"
+                            android:textColor="@color/colorTextPrimary"
+                            android:text="@string/interview_rating_3.0"
+                            android:layout_marginStart="14dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/font_small_small"
+                            android:textColor="@color/colorTextPrimary"
+                            android:text="@string/interview_rating_4.0"
+                            android:layout_marginStart="6dp"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/font_small_small"
+                            android:textColor="@color/colorTextPrimary"
+                            android:text="@string/interview_rating_5.0"
+                            android:layout_marginStart="8dp"/>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
