Fixes after rebase

--- a/pets/app/src/main/res/layout/fragment_interview.xml
+++ b/pets/app/src/main/res/layout/fragment_interview.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorBackground">
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -55,7 +54,7 @@
                         android:textAlignment="center"
                         android:textColor="@color/colorTextPrimary"
                         android:paddingStart="50dp"
-                        tools:ignore="LabelFor" />
+                        tools:ignore="LabelFor,RtlSymmetry" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
