--- a/pets/app/src/main/res/layout/fragment_interview.xml
+++ b/pets/app/src/main/res/layout/fragment_interview.xml
@@ -25,74 +25,81 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingStart="32dp"
-                android:paddingEnd="32dp">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/dayTypeTextInputLayout"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:hint="@string/interview_day_type"
-                    android:orientation="horizontal"
-                    android:theme="@style/TextInputLayout"
-                    app:boxBackgroundColor="@android:color/white"
-                    app:endIconMode="dropdown_menu"
-                    app:endIconTint="@color/colorIconLight"
-                    tools:ignore="MissingConstraints">
-
-                    <AutoCompleteTextView
-                        android:id="@+id/dayTypeTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:cursorVisible="false"
-                        android:focusable="false"
-                        android:focusableInTouchMode="false"
-                        android:inputType="none"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorTextPrimary"
-                        android:paddingStart="50dp"
-                        tools:ignore="LabelFor,RtlSymmetry" />
-
-                </com.google.android.material.textfield.TextInputLayout>
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="16dp"
-                    android:paddingStart="64dp"
-                    android:paddingEnd="64dp">
+                    android:paddingStart="32dp"
+                    android:paddingEnd="32dp">
 
-                    <com.google.android.material.imageview.ShapeableImageView
-                        android:id="@+id/avatarImageView"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal"
-                        android:scaleType="fitXY"
-                        app:srcCompat="@drawable/ic_animal_paw" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/dayTypeTextInputLayout"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/font_big"
-                        android:textStyle="bold"
-                        android:lineSpacingMultiplier="1.25"
-                        android:text="@string/interview_pet_icon_label"
-                        android:textAlignment="center"
-                        android:textColor="@color/colorAccent" />
+                        android:layout_marginTop="16dp"
+                        android:hint="@string/interview_day_type"
+                        android:orientation="horizontal"
+                        android:theme="@style/TextInputLayout"
+                        app:boxBackgroundColor="@android:color/white"
+                        app:endIconMode="dropdown_menu"
+                        app:endIconTint="@color/colorIconLight"
+                        tools:ignore="MissingConstraints">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/dayTypeTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:cursorVisible="false"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            android:inputType="none"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorTextPrimary"
+                            android:paddingStart="50dp"
+                            tools:ignore="LabelFor,RtlSymmetry" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginTop="16dp"
+                        android:paddingStart="40dp"
+                        android:paddingEnd="40dp">
+
+                        <com.google.android.material.imageview.ShapeableImageView
+                            android:id="@+id/avatarImageView"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_gravity="center_horizontal"
+                            android:scaleType="fitXY"
+                            app:srcCompat="@drawable/ic_animal_paw" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/font_big"
+                            android:textStyle="bold"
+                            android:lineSpacingMultiplier="1.25"
+                            android:text="@string/interview_pet_icon_label"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorAccent" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_marginTop="32dp">
 
                     <RatingBar
-                        android:layout_marginTop="64dp"
                         android:id="@+id/ratingBar"
                         android:theme="@style/RatingBar"
                         android:layout_width="wrap_content"
@@ -114,7 +121,7 @@
                             android:textSize="@dimen/font_small_small"
                             android:textColor="@color/colorTextPrimary"
                             android:text="@string/interview_rating_1.0"
-                            android:layout_marginStart="14dp"/>
+                            android:layout_marginStart="20dp"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -122,7 +129,7 @@
                             android:textSize="@dimen/font_small_small"
                             android:textColor="@color/colorTextPrimary"
                             android:text="@string/interview_rating_2.0"
-                            android:layout_marginStart="10dp"/>
+                            android:layout_marginStart="11dp"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -130,7 +137,7 @@
                             android:textSize="@dimen/font_small_small"
                             android:textColor="@color/colorTextPrimary"
                             android:text="@string/interview_rating_3.0"
-                            android:layout_marginStart="14dp"/>
+                            android:layout_marginStart="13dp"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -138,7 +145,7 @@
                             android:textSize="@dimen/font_small_small"
                             android:textColor="@color/colorTextPrimary"
                             android:text="@string/interview_rating_4.0"
-                            android:layout_marginStart="6dp"/>
+                            android:layout_marginStart="5dp"/>
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -159,6 +166,7 @@
                 android:layout_height="wrap_content"
                 android:paddingStart="48dp"
                 android:paddingEnd="48dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:layout_alignParentBottom="true"
                 android:textAlignment="center"
