--- a/pets/app/src/main/res/layout/fragment_interview.xml
+++ b/pets/app/src/main/res/layout/fragment_interview.xml
@@ -1,82 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    android:orientation="vertical"
+    android:background="@color/colorBackground">
 
-    <RelativeLayout
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"/>
 
-        <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingStart="32dp"
-            android:paddingEnd="32dp">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dayTypeTextInputLayout"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:hint="@string/interview_day_type"
-                android:orientation="horizontal"
-                android:theme="@style/TextInputLayout"
-                app:boxBackgroundColor="@android:color/white"
-                app:endIconMode="dropdown_menu"
-                app:endIconTint="@color/colorIconLight"
-                tools:ignore="MissingConstraints">
-
-                <AutoCompleteTextView
-                    android:id="@+id/dayTypeTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:cursorVisible="false"
-                    android:focusable="false"
-                    android:focusableInTouchMode="false"
-                    android:inputType="none"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorTextPrimary"
-                    tools:ignore="LabelFor" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingStart="64dp"
-                android:paddingEnd="64dp">
+                android:paddingStart="32dp"
+                android:paddingEnd="32dp">
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/dayTypeTextInputLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/font_few_big"
-                    android:text="@string/interview_pet_icon_label"
-                    android:textAlignment="center"
-                    android:textColor="@color/colorAccent" />
+                    android:layout_marginTop="16dp"
+                    android:hint="@string/interview_day_type"
+                    android:orientation="horizontal"
+                    android:theme="@style/TextInputLayout"
+                    app:boxBackgroundColor="@android:color/white"
+                    app:endIconMode="dropdown_menu"
+                    app:endIconTint="@color/colorIconLight"
+                    tools:ignore="MissingConstraints">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/dayTypeTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:focusableInTouchMode="false"
+                        android:inputType="none"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorTextPrimary"
+                        tools:ignore="LabelFor" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginTop="16dp"
+                    android:paddingStart="64dp"
+                    android:paddingEnd="64dp">
+
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/avatarImageView"
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:layout_gravity="center_horizontal"
+                        android:scaleType="fitXY"
+                        app:srcCompat="@drawable/ic_animal_paw" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/font_big"
+                        android:textStyle="bold"
+                        android:lineSpacingMultiplier="1.25"
+                        android:text="@string/interview_pet_icon_label"
+                        android:textAlignment="center"
+                        android:textColor="@color/colorAccent" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="48dp"
+                android:paddingEnd="48dp"
+                android:layout_marginBottom="10dp"
+                android:layout_alignParentBottom="true"
+                android:textAlignment="center"
+                android:lineSpacingMultiplier="1.25"
+                android:textColor="@color/colorTextSecondary"
+                android:text="@string/interview_footer" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="48dp"
-            android:paddingEnd="48dp"
-            android:layout_marginBottom="10dp"
-            android:layout_alignParentBottom="true"
-            android:textAlignment="center"
-            android:textColor="@color/colorTextSecondary"
-            android:text="@string/interview_footer" />
+        </RelativeLayout>
 
-    </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 
-</androidx.core.widget.NestedScrollView>
+</LinearLayout>
