Настроила календарь на главном экране

--- a/pets/app/src/main/res/values/colors.xml
+++ b/pets/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#f85f6a</color>
     <color name="colorPrimaryDark">#f85f6a</color>
     <color name="colorAccent">#f85f6a</color>
-    <color name="colorPrimaryLight">#FFB8BD</color>
+    <color name="colorPrimaryLight">#FDC1C6</color>
 
     <color name="colorTextPrimary">#000000</color>
     <color name="colorTextSecondary">#6F6F6F</color>
