--- a/pets/app/src/main/res/layout/fragment_calendar.xml
+++ b/pets/app/src/main/res/layout/fragment_calendar.xml
@@ -17,7 +17,7 @@
             android:id="@+id/avatarImageView"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_gravity="start"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_photo_placeholder"
@@ -34,5 +34,37 @@
             android:textColor="@android:color/white"
             tools:text="Марсик"/>
     </androidx.appcompat.widget.Toolbar>
+
+    <com.kizitonwose.calendarview.CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cv_dayViewResource="@layout/item_timetable_calendar_day"
+        app:cv_monthHeaderResource="@layout/item_timetable_calendar_day_legend"
+        app:cv_orientation="horizontal"
+        app:cv_maxRowCount="6"
+        app:cv_outDateStyle="endOfGrid"
+        app:cv_inDateStyle="allMonths"
+        app:cv_hasBoundaries="true"
+        app:cv_scrollMode="paged"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
+        android:id="@+id/currentSelectDateTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:textSize="@dimen/font_normal"
+        android:textColor="@color/colorTextPrimary"
+        android:background="@color/colorPrimaryLight"
+        app:layout_constraintTop_toBottomOf="@id/calendarView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="1 Марта 2021"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
