--- a/pets/app/src/main/res/layout/fragment_calendar.xml
+++ b/pets/app/src/main/res/layout/fragment_calendar.xml
@@ -67,4 +67,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="1 Марта 2021"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add"
+        app:backgroundTint="@color/colorPrimary"
+        app:tint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="ContentDescription" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
