--- a/pets/app/src/main/res/layout/fragment_event.xml
+++ b/pets/app/src/main/res/layout/fragment_event.xml
@@ -74,8 +74,7 @@
                 android:hint="@string/event_date"
                 android:theme="@style/TextInputLayout"
                 app:endIconMode="clear_text"
-                app:endIconTint="@color/colorIconLight"
-                android:visibility="gone">
+                app:endIconTint="@color/colorIconLight">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/dateTextInputEditText"
