--- a/pets/app/src/main/res/values/strings_array.xml
+++ b/pets/app/src/main/res/values/strings_array.xml
@@ -34,7 +34,7 @@
         <item>Позавчера</item>
         <item>3 дня назад</item>
         <item>4 дня назад</item>
-        <item>5 дня назад</item>
+        <item>5 дней назад</item>
         <item>6 дней назад</item>
         <item>Неделю назад</item>
     </array>
