--- a/pets/app/src/main/res/layout/fragment_interview.xml
+++ b/pets/app/src/main/res/layout/fragment_interview.xml
@@ -30,9 +30,9 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:hint="@string/interview_day_type"
                 android:orientation="horizontal"
                 android:theme="@style/TextInputLayout"
+                app:hintEnabled="false"
                 app:boxBackgroundColor="@android:color/white"
                 app:endIconMode="dropdown_menu"
                 app:endIconTint="@color/colorIconLight"
