--- a/pets/app/src/main/res/values/strings_array.xml
+++ b/pets/app/src/main/res/values/strings_array.xml
@@ -38,4 +38,12 @@
         <item>6 дней назад</item>
         <item>Неделю назад</item>
     </array>
+    
+    <array name="moods">
+        <item>Агрессивный</item>
+        <item>Злой</item>
+        <item>Ласковый</item>
+        <item>Спокойный</item>
+        <item>Добрый</item>
+    </array>
 </resources>
